--- a/app/src/main/res/layout/proba_za_splash.xml
+++ b/app/src/main/res/layout/proba_za_splash.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/splash">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/splash"
+    tools:context=".SplashScreen">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/splash_slika"/>
+        android:id="@+id/splash_slika"
+        />
 
 </RelativeLayout>
